i added my project links

--- a/sambee/index.html
+++ b/sambee/index.html
@@ -69,51 +69,64 @@
     <div class="grid-project1">
 <div class="git-folder">
     <div><a href=""><i class="fa-brands fa-github"></i></a></div>
-    <div><i class="fa-solid fa-folder"></i></div>
+   <div><a href="https://sambee-weather.netlify.app/"><i class="fa-solid fa-square-up-right"></i></a></div>
+ 
     </div>
 <div class="explanation">
     <p>Weather Web APP</p>
     <P>
         A weather web app that is created to <br> give weather and forcast information.
     </P>
+    <li><i class="fa-solid fa-circle-small"></i> HTML & CSS</li>
+  <li><i class="fa-solid fa-circle-small"></i> JavaScript (ES6+)</li>
 </div>
     </div>
      <div class="grid-project1">
       <div class="git-folder">
     <div><a href="https://github.com/sambee-coding/addis-amet-gift"><i class="fa-brands fa-github"></i></a></div>
-    <div><i class="fa-solid fa-folder"></i></div>
+    <div><a href="https://addis-amet-gift-2018.netlify.app/"><i class="fa-solid fa-square-up-right"></i></a></div>
+ 
     </div>
     <div class="explanation">
     <p>New year gift</p>
     <P>
         A wonderful new year gift tailord to ethopian (my counrtry design ) <br>
     </P>
+     <li><i class="fa-solid fa-circle-small"></i> HTML & CSS</li>
+  <li><i class="fa-solid fa-circle-small"></i> JavaScript (ES6+)</li>
 </div>
     </div>
      <div class="grid-project1">
       <div class="git-folder">
     <div><a href=""><i class="fa-brands fa-github"></i></a></div>
-    <div><i class="fa-solid fa-folder"></i></div>
+    <div><a href="https://world-clock-sambeei.netlify.app/"><i class="fa-solid fa-square-up-right"></i></a></div>
+
     </div>
      <div class="explanation">
     <p>World Clock</p>
     <P>
        i have made a world clock web app that can give information when someone wants to know their local time and another country time too 
     </P>
+     <li><i class="fa-solid fa-circle-small"></i> HTML & CSS</li>
+  <li><i class="fa-solid fa-circle-small"></i> JavaScript (ES6+)</li>
 </div>
     </div>
      <div class="grid-project1">
        <div class="git-folder">
     <div><a href=""><i class="fa-brands fa-github"></i></a></div>
-    <div><i class="fa-solid fa-folder"></i></div>
+    <div><a href="https://poem-generator-sambee.netlify.app/"><i class="fa-solid fa-square-up-right"></i></a></div>
+ 
     </div>
      <div class="explanation">
     <p>poem generator</p>
     <P>
        i have made an 8 line poem generator that use ai by reciving user input words <br>
     </P>
+     <li><i class="fa-solid fa-circle-small"></i> HTML & CSS</li>
+  <li><i class="fa-solid fa-circle-small"></i> JavaScript (ES6+)</li>
 </div>
     </div>
+  
   </div>
 </section>
 
